--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -r -f node_modules dist",
+    "clean": "rm -r -f node_modules dist server/dist cypress/videos",
     "lint": "eslint . --ext .js,.ts,.tsx",
-    "start": "webpack serve --port 3000",
-    "build": "NODE_ENV=production webpack",
-    "build:dev": "webpack",
-    "server": "ts-node -r tsconfig-paths/register server/index.tsx --port 3000",
-    "server:dev": "npm run build:dev && nodemon --watch 'src/**/*' -e ts,tsx --exec 'npm run build:dev && npm run server'",
+    "start:ui": "webpack serve --port 3000",
+    "start:server:dev": "ts-node -r tsconfig-paths/register server/index.tsx --port 3000",
+    "build:ui": "NODE_ENV=production webpack",
+    "build:ui:dev": "webpack",
+    "build:server": "tsc -p ./server && tsc-alias -p ./server/tsconfig.json",
+    "build": "npm run build:ui && npm run build:server",
+    "server": "node server/dist/server/index.js --port 3000",
+    "server:dev": "npm run build:ui:dev && nodemon --watch 'src/**/*' -e ts,tsx --exec 'npm run build:ui:dev && npm run start:server:dev'",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:cypress": "concurrently -k 'npm run server' 'npm run cypress:run'"
@@ -26,7 +29,6 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
-    "@types/whatwg-fetch": "^0.0.33",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "concurrently": "^6.4.0",
@@ -42,6 +44,8 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "tsc-alias": "^1.4.2",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
@@ -55,7 +59,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
-    "ts-node": "^10.4.0",
     "whatwg-fetch": "^3.6.2"
   }
 }
