--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "server:dev": "npm run build:ui:dev && nodemon --watch 'src/**/*' -e ts,tsx --exec 'npm run build:ui:dev && npm run start:server:dev'",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:cypress": "concurrently -k 'npm run server' 'npm run cypress:run'"
+    "test:cypress": "concurrently -k 'npm run server' 'npm run cypress:run'",
+    "storybook:start": "start-storybook -s ./ -p 6006"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/addon-viewport": "^6.4.9",
+    "@storybook/react": "^6.4.9",
     "@types/core-js": "^2.5.5",
     "@types/express": "^4.17.13",
     "@types/jquery": "^3.5.9",
@@ -31,8 +37,9 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "concurrently": "^6.4.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^5.2.7",
     "cypress": "^9.1.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
@@ -43,6 +50,10 @@
     "mini-css-extract-plugin": "^2.4.5",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
+    "sass": "^1.45.0",
+    "sass-loader": "^10",
+    "storybook": "^6.4.4",
+    "style-loader": "^2.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsc-alias": "^1.4.2",
